[gd_scene load_steps=9 format=2]

[ext_resource path="res://areas/main.gd" type="Script" id=1]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://areas/Maze01v2.tscn" type="PackedScene" id=3]
[ext_resource path="res://areas/Portail.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/player2.tscn" type="PackedScene" id=5]
[ext_resource path="res://items/codexv2.tscn" type="PackedScene" id=6]
[ext_resource path="res://items/baguettev2.tscn" type="PackedScene" id=7]
[ext_resource path="res://areas/Overworld_Theme.ogg" type="AudioStream" id=8]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="Maze1v2" parent="." instance=ExtResource( 3 )]
texture = null
generate = false

[node name="BackgroundStaticObjects" type="Node2D" parent="."]

[node name="Entree" type="Node2D" parent="BackgroundStaticObjects"]

[node name="Portail1" parent="BackgroundStaticObjects/Entree" instance=ExtResource( 4 )]
position = Vector2( 367.565, 95.9651 )
world_scene = "res://areas/ZoneFinale.tscn"

[node name="Player2" parent="." groups=[
"Players",
] instance=ExtResource( 5 )]
position = Vector2( 0.801042, 0.193619 )
scale = Vector2( 0.7, 0.7 )

[node name="Camera2D2" type="Camera2D" parent="Player2"]
position = Vector2( 0, 1.28927 )
anchor_mode = 0
current = true
zoom = Vector2( 0.7, 0.7 )

[node name="codexv2" parent="." groups=[
"item3",
] instance=ExtResource( 6 )]
position = Vector2( 217.183, 141.064 )
scale = Vector2( 0.7, 0.7 )

[node name="baguette2" parent="." instance=ExtResource( 7 )]
position = Vector2( 390.335, 165.506 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Buttonstop" type="Button" parent="."]
visible = false
margin_left = 7.78358
margin_top = 121.39
margin_right = 47.7836
margin_bottom = 141.39
text = "Stop"

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 6.58611
margin_top = 88.6131
margin_right = 47.5861
margin_bottom = 108.613
text = "Start"

[connection signal="hit" from="baguette2" to="." method="_on_baguette2_hit"]
[connection signal="pressed" from="Buttonstop" to="." method="_on_Buttonstop_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
